<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/commonLayoutViewTheme"
    android:orientation="vertical">
    <include layout="@layout/activity_common_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <!--目的地-->
            <RelativeLayout
                android:id="@+id/rl_select_destination"
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_destination"
                    android:id="@+id/textView2" />

                <TextView
                    android:id="@+id/tv_destination"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:hint="@string/home_forecast_order_destination_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:background="@mipmap/mine_go" />
            </RelativeLayout>

            <View style="@style/commonHorizontalViewTheme" />
            <!--运输方式-->
            <RelativeLayout
                android:id="@+id/rl_select_transport_mode"
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_transport_mode" />

                <TextView
                    android:id="@+id/tv_transport_mode"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:hint="@string/home_forecast_order_transport_mode_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:background="@mipmap/mine_go" />
            </RelativeLayout>

            <View style="@style/commonHorizontalViewTheme" />
            <!--实际重量-->
            <RelativeLayout
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_weight" />

                <EditText
                    android:id="@+id/tv_weight"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:text="单位:KG" />
            </RelativeLayout>

            <View style="@style/commonHorizontalViewTheme" />
            <!--体积-->
            <RelativeLayout
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/textView"
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_volume" />

                <EditText
                    android:id="@+id/tv_volume"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:text="单位:KG" />
            </RelativeLayout>

            <View style="@style/commonHorizontalViewTheme" />
            <!--参考单号-->
            <RelativeLayout
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_number" />

                <EditText
                    android:id="@+id/tv_order_id"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:hint="如不填写,系统自动生成"
                    android:inputType="number" />


            </RelativeLayout>

            <View style="@style/commonHorizontalViewTheme" />
            <!--类型-->
            <RelativeLayout
                android:id="@+id/rl_select_type"
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_type" />

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                   android:hint="@string/home_forecast_order_type_hint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:background="@mipmap/mine_go" />
            </RelativeLayout>

            <View style="@style/commonHorizontalViewTheme" />

            <TextView
                style="@style/OrdinaryBlackTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="选择地址" />

            <View style="@style/commonHorizontalViewTheme" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="99dp"
                android:text="申报信息" />
            <!--品名-->
            <RelativeLayout
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_name_edit" />

                <EditText
                    android:id="@+id/tv_name"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </RelativeLayout>
            <!--数量-->
            <RelativeLayout
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_number_etit" />

                <EditText
                    android:id="@+id/tv_count"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </RelativeLayout>
            <!--单价-->
            <RelativeLayout
                style="@style/mineOrderEditLvTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/OrdinaryBlackTextTheme"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_forecast_order_price_edit" />

                <EditText
                    android:id="@+id/et_price"
                    style="@style/mineCreateTextTheme01"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </RelativeLayout>

            <View style="@style/commonHorizontalViewTheme" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_add_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                    android:padding="6dp"
                    android:drawableLeft="@mipmap/icon_table_add"
                    android:drawablePadding="4dp"
                    android:textColor="@color/word_orange"
                    android:textSize="@dimen/word_them_ordinary"
                    android:text="@string/home_forecast_order_add_info" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_submit"
                style="@style/CommonSubmitBtnTheme"
                android:padding="6dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_forecast_order_apply" />

            <Button
                android:id="@+id/btn_save"
                style="@style/CommonSubmitBtnTheme"
                android:padding="6dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_forecast_order_save" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
